--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,122 @@
-/* * {
-   margin: 0;
-    font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #FFB347, #FFDAB9, #98FB98);
-    background-size: 400% 400%;
-    animation: gradientAnimation 15s ease infinite;
-    color: #333;
- }  */
-
 * {
-   background-color: blueviolet;
-}
+   margin: 0;
+   padding: 0;
+   font-family: "Georgia", sans-serif;   
+ }  
+
+ body {
+   width: 100%; 
+   padding-top: 3%;
+   min-height: 100vh;
+   background-image: url('background_recettes.jpg');
+   background-position: center; 
+   background-size: cover;
+   background-repeat: no-repeat; 
+   color: whitesmoke;
+ }
 
 /*Général*/
 h1 {
    text-align: center; 
-   color: blue;  
-}
-
-.line {
-   border: 1px solid violet;
-}
-
-tr {
-  text-align: center;
+   padding-bottom: 10%;   
+   color: bisque;
 }
 
 .name {
   text-align: left;
 }
 
+main {
+   width : 60%;
+   margin-left: 5%;  
+}
+
+/*Listing recettes*/
+table {    
+   text-align: center;  
+   width: 60%;  
+}
+
+.section_listing {
+   display: flex;
+   justify-content: center;
+}
+
+a {
+   text-decoration: none;
+   color: whitesmoke;
+}
+
+.line_title {
+   color: antiquewhite;   
+   text-transform: uppercase;
+}
+
+thead th {   
+   padding-bottom: 3%;
+}
+
+tbody td {
+   padding: 0.5% 0;
+}
+
+.nom_rec {
+   width: 40%;
+}
+
+.nom_cat {
+   width: 30%;
+}
+
+.ing {
+   padding: 0.5%;
+}
+
+li {
+   list-style-type: none;
+   padding: 0 0 0.5% 3%;
+}
+
+.tps {
+   width: 5%;
+}
+
+td:: {
+   
+}
+
 /*Détail Recette*/
 nav {
-    text-align: center;   
+    text-align: left;   
+    padding-left: 1%; 
+}
+
+nav a {
+   color: pink;
+}
+
+.title {
+   padding-top: 3%;
 }
 
 
-/*Listing recettes*/
+/*Media queries*/
+@media (max-width: 1215px) {
+   table {    
+      text-align: center;  
+      width: 80%;   
+   }
+}
+
+@media (max-width: 980px) {
+   table {    
+      text-align: center;  
+      width: 100%;   
+   }
+}
+
+
+
 
 
 
